<resources>
    <string name="app_name">Weather</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="ctn">Continue</string>
    <string name="or">&#160; &#160; or &#160; &#160;</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="weather_app">Weather App</string>
    <string name="fetching_data">Fetching data</string>
    <string name="unit_c">°C</string>
    <string name="unit_f">°F</string>
    <string name="_0">0</string>
    <string name="min_max_n">Min | Max\n</string>
    <string name="feels_like_n">Feels Like\n</string>
    <string name="humidity_n">Humidity\n</string>
    <string name="wind_speed_n">Wind Speed\n</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sunrise_n">Sunrise\n</string>
    <string name="sunset_n">Sunset\n</string>
</resources>