<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/background">

    <LinearLayout
        android:id="@+id/hiddenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rvIcon"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_unknown"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/rvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/rvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
            </LinearLayout>

            <android.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/rvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_more"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <GridLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="5"
            android:padding="10dp"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/rvMinMax"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="8dp"
                android:text="@string/min_max_n"
                app:drawableLeftCompat="@drawable/ic_temperature" />

            <TextView
                android:id="@+id/rvFeelsLike"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="5dp"
                android:text="@string/feels_like_n"
                app:drawableLeftCompat="@drawable/ic_temperature" />

            <TextView
                android:id="@+id/rvHumidity"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="5dp"
                android:text="@string/humidity_n"
                app:drawableLeftCompat="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/rvWindSpeed"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="5dp"
                android:text="@string/wind_speed_n"
                app:drawableLeftCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/rvSunrise"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="5dp"
                android:text="@string/sunrise_n"
                app:drawableLeftCompat="@drawable/ic_sunrise" />

            <TextView
                android:id="@+id/rvSunset"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:drawablePadding="5dp"
                android:text="@string/sunset_n"
                app:drawableLeftCompat="@drawable/ic_sunset" />
        </GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>