<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmg4"
    tools:context=".Home">

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_settings"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSettings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:paddingVertical="25dp">

            <ImageView
                android:src="@drawable/sunb"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/weather_app"
                android:textAlignment="center"
                android:textColor="@color/text_color_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCityInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_gps"
                android:drawablePadding="5dp"
                android:hint="@string/enter_a_city"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/text_color_primary"
                android:textColorHint="@color/text_color_accent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button"
                android:text="@string/ctn"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/text_color_accent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/background"
                    android:padding="2dp"
                    android:text="@string/or"
                    android:textColor="@color/text_color_primary" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:minHeight="48dp"
                android:text="@string/use_current_location"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>